--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,11 @@
 <h3>Bienvenido a <%= title %></h3>
 El portal donde podrá crear sus propios juegos!
+<form id="formBusqueda" action="/quizes" method="get">
+<br>
+Busque preguntas
+<br>
+Texto
+<input type="text" id="search" name="search" maxlength="50" required/>
+<button type="submit">Enviar</button>
+</form>
 
