--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -3,6 +3,7 @@
 	<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 	<% } %>
 </table>
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a> 
 <form id="formBusqueda" action="/quizes" method="get">
 <br>
 Busque preguntas
